Merge branch 'main' into ws-improvements